[feat] Pin 정적팩토리메소드 수정, StringUtils 사용, 단일 조회 Optional 설정
1. 객체 생성 로직이 단순한 경우이기에 빌더 패턴으로 변경

2. keyword의 blank 체크를 간편하게 할 수 있는 아파치의 StringUtils 사용

3. 단일 객체 조회의 경우 Mapper 인터페이스에서 Optional 객체로 반환 후 서비스 계층에서 처리하도록 변경